--- a/app/templates/player.html
+++ b/app/templates/player.html
@@ -1,6 +1,7 @@
 <h3>Player</h3>
 
-<video (click)="playPause()" controls>
-    <!-- <source template="ng-for #video of src" [src]="video.src" [type]="video.type"> -->
-    <source *ng-for="#video of src" src="video.src" type="video.type">
-</video>
+<audio controls>
+    <source *ng-for="#audio of files" src="{{audio.src}}" type="{{audio.type}}">
+</audio>
+
+<button (click)="playPause()">play/pause</button>
