--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,12 +1,19 @@
 <h1>Welcome !</h1>
 
 <p>Objectif par jour: {{ dayGoal }}</p>
-<input #inputDayGoal type="number" (change)="updateDayGoal($event)">
+<input type="number" (change)="updateDayGoal($event)">
 
 <p>Objectif par semaine: {{ weekGoal }}</p>
-<input #inputWeekGoal type="number" (change)="updateWeekGoal($event)">
+<input type="number" (change)="updateWeekGoal($event)">
+
+<p>Prix du paquet: {{ pricePack }}</p>
+<input type="number" (change)="updatePricePack($event)">
+
+<p>Nombre de paquets achetés: {{ nbPacks }}</p>
+<input type="number" (change)="updateNbPacks($event)">
 
 <p>Nombre de cigarettes consommées : {{ totalCigarettes }}</p>
 <p>Soit : {{ budgetCigarettes }}€</p>
+<p>Il vous reste {{ cigarettesLeft }} cigarettes</p>
 
 <button (click)="addACigarette()">Add A Cigarette</button>
