Add message suggestion

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -5,7 +5,8 @@
 		</div>
 
 		<p *ng-if="totalCigarettes && beginDate">Vous avez consommé {{ totalCigarettes }} cigarettes depuis le {{beginDate}}, {{dayCount}} cigarettes aujourd'hui et {{weekCount}} cigarettes depuis le début de la semaine.</p>
-		<p *ng-if="budgetCigarettes">Cela vous a coûté {{ budgetCigarettes }}€.</p>
+		<p *ng-if="budgetCigarettes">Cela vous a coûté {{ budgetCigarettes }}€</p>
+		<p *ng-if="messageSuggestion" style="color: red;">{{messageSuggestion}}</p>
 
 		<p *ng-if="cigarettesLeft > 0">Il vous reste {{ cigarettesLeft }} cigarettes.</p>
 		<p *ng-if="cigarettesLeft && cigarettesLeft <= 0">Il ne vous reste plus aucune cigarette.</p>
