--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -4,11 +4,11 @@
 			<h1>Calculez votre consommation de cigarettes</h1>
 		</div>
 
-		<p *ng-if="totalCigarettes && beginDate">Vous avez consommé {{ totalCigarettes }} cigarettes depuis le {{beginDate}}, <span [class.red]="getTodayClass()">{{todayCount}} cigarettes</span> aujourd'hui et <span [class.red]="getWeekClass()">{{weekCount}} cigarettes</span> depuis le début de la semaine.</p>
+		<p *ng-if="totalCigarettes && beginDate">Vous avez consommé {{ totalCigarettes }} <span *ng-if="totalCigarettes == 1">cigarette</span><span *ng-if="totalCigarettes > 1">cigarettes</span> depuis le {{beginDate}}, <span [class.red]="getTodayClass()">{{todayCount}}</span> <span *ng-if="todayCount == 1">cigarette</span><span *ng-if="todayCount > 1">cigarettes</span> aujourd'hui et <span [class.red]="getWeekClass()">{{weekCount}}</span> <span *ng-if="weekCount == 1">cigarette</span><span *ng-if="weekCount > 1">cigarettes</span> depuis le début de la semaine.</p>
+
 		<p *ng-if="budgetCigarettes">Cela vous a coûté {{ budgetCigarettes }}€.</p>
 		<p *ng-if="messageSuggestion" class="red">{{messageSuggestion}}</p>
-
-		<p *ng-if="cigarettesLeft > 0">Il vous reste {{ cigarettesLeft }} cigarettes.</p>
+		<p *ng-if="cigarettesLeft > 0">Il vous reste {{ cigarettesLeft }} <span *ng-if="cigarettesLeft == 1">cigarette</span><span *ng-if="cigarettesLeft > 1">cigarettes</span>.</p>
 		<p *ng-if="cigarettesLeft && cigarettesLeft <= 0">Il ne vous reste plus aucune cigarette.</p>
 
 		<button (click)="addACigarette()" class="btn btn-primary btn-lg">Ajouter une cigarette consommée</button>
@@ -18,7 +18,7 @@
 
 		<div class="panel panel-default">
 			<div  *ng-if="dayGoal" class="panel-heading">
-				<h3 class="panel-title">Votre objectif <strong>/jour</strong> actuel est de <strong class="orange">{{ dayGoal }}</strong> cigarettes maximum</h3>
+				<h3 class="panel-title">Votre objectif <strong>/jour</strong> actuel est de <strong class="orange">{{ dayGoal }}</strong> <span *ng-if="dayGoal == 1">cigarette</span><span *ng-if="dayGoal > 1">cigarettes</span> maximum</h3>
 			</div>
 
 		  	<div class="panel-body">	
@@ -31,7 +31,7 @@
 
 		<div class="panel panel-default">
 			<div  *ng-if="weekGoal" class="panel-heading">
-				<h3 class="panel-title">Votre objectif <strong>/semaine</strong> actuel est de <strong class="orange">{{ weekGoal }}</strong> cigarettes maximum</h3>
+				<h3 class="panel-title">Votre objectif <strong>/semaine</strong> actuel est de <strong class="orange">{{ weekGoal }}</strong> <span *ng-if="weekGoal == 1">cigarette</span><span *ng-if="weekGoal > 1">cigarettes</span> maximum</h3>
 			</div>
 
 		  	<div class="panel-body">	
@@ -59,12 +59,12 @@
 
 		<div class="panel panel-default">
 			<div  *ng-if="nbPacks" class="panel-heading">
-				<h3 class="panel-title">Vous avez acheté {{ nbPacks }} paquets de cigarettes</h3>
+				<h3 class="panel-title">Vous avez acheté {{ nbPacks }} <span *ng-if="nbPacks == 1">paquet</span><span *ng-if="nbPacks > 1">paquets</span> de cigarettes</h3>
 			</div>
 
 		  	<div class="panel-body">	
 				<div class="form-group">
-					<label for="packs">Ajoutez le nombre de nouveaux paquets de cigarettes achetés</label>
+					<label for="packs">Ajoutez le nombre de nouveaux paquets de cigarettes achetés (20 cigarettes/paquet)</label>
 		  			<input type="number" id="packs" (change)="updateNbPacks($event)" class="form-control" placeholder="Nombre de paquets achetés">
 				</div>
 		  	</div>
